# lume

./: .travis.yml  CMakeLists.txt  LICENSE  Readme.md  annex.h  annex_storage.h  array_annex.h  custom_exception.h  file_io.cpp  file_io.h  grob.cpp  grob.h  grob_array.h  grob_hash.h  grob_index.h  grob_iterator.h  mesh.cpp  mesh.h  neighborhoods.cpp  neighborhoods.h  neighborhoods_impl.hpp  neighbors.cpp  neighbors.h  normals.cpp  normals.h  subset_info_annex.cpp  subset_info_annex.h  tests.cpp  tests.h  tests_main.cpp  topology.cpp  topology.h  topology_impl.h  types.h  unpack.h  vec_math_raw.h
include/lume/: annex.h  annex_key.h  annex_storage.h  annex_table.h  array_annex.h  custom_exception.h  file_io.h  grob.h  grob_array.h  grob_desc.h  grob_index.h  grob_iterator.h  grob_set.h  grob_set_types.h  grob_types.h  lume_error.h  mesh.h  mesh_builder.h  neighborhoods.h  neighborhoods_impl.hpp  neighbors.h  parallel_for.h  rim_mesh.h  subset_info_annex.h  topology.h  topology_impl.h  tuple_vector.h  unpack.h
include/lume/commands/: arguments.h  command.h  commander.h  types.h
include/lume/impl/: array_16_4.h
lume/: CMakeLists.txt
lume/include/lume/: annex.h  annex_key.h  annex_table.h  arithmetic_tuple.h  array_annex.h  array_iterator.h  edge_mesh_2d.h  edge_mesh_2d_impl.h  file_io.h  grob.h  grob_array.h  grob_desc.h  grob_hash.h  grob_iterator.h  grob_types.h  hierarchy.h  lume_error.h  mesh.h  neighborhoods.h  neighborhoods_impl.hpp  neighbors.h  normals.h  parallel_for.h  pettyprof.h  refinement.h  rim_mesh.h  subset_info_annex.h  surface_analytics.h  to_string.h  topology.h  topology_impl.h  tuple_vector.h  types.h  unpack.h  vec_math_raw.h
lume/include/lume/commands/: arguments.h  command.h
lume/include/lume/impl/: array_16_4.h
lume/include/lume/math/: geometry.h  grob_math.h  tuple.h  tuple_impl.h  tuple_view.h  vector_math.h
lume/include/lume/math/raw/: vector_math_raw.h
lume/src/lume/: edge_mesh_2d.cpp  file_io.cpp  file_io_in.cpp  file_io_out.cpp  grob.cpp  grob_desc.cpp  grob_types.cpp  mesh.cpp  normals.cpp  refinement.cpp  rim_mesh.cpp  subset_info_annex.cpp  topology.cpp
lumeshell/: CMakeLists.txt  lumeshell.cpp
lumeshell/src/: lumeshell.cpp
lumetest/: CMakeLists.txt
lumetest/testdata/meshes/: box_with_spheres.ele  tri_and_quad.ugx
lumetests/: CMakeLists.txt
lumetests/src/: tests.cpp
lumetests/testdata/meshes/: box_with_spheres.face  bunny_coarse.ugx  individual_triangles.ugx  sacked-boxes.stl  sphere.stl  stacked-boxes.ugx
lumeview/: CMakeLists.txt
lumeview/shaders/: flat_shading.fs  flat_shading.gs  flat_shading.vs
lumeview/src/lumeview/: lumeview.cpp  lumeview.h  lumeview_error.h  main.cpp
lumeview/src/lumeview/actors/: active_actors.cpp  active_actors.h  actor.h
lumeview/src/lumeview/camera/: camera.cpp  camera.h  viewport.h
lumeview/src/lumeview/camera/cmd/: focus_nodes.h  interpolate.h
lumeview/src/lumeview/cmd/: active_command_queues.cpp  active_command_queues.h  barrier.h  block.h  camera_commands.h  command.h  command_desc.h  command_factory.h  command_queue.h  group.cpp  group.h  group_id.h
lumeview/src/lumeview/cmd/camera/: focus_nodes.h  interpolate.h
lumeview/src/lumeview/cmd/widgets/: command_menu.cpp  command_menu.h
lumeview/src/lumeview/editor/: editor.h
lumeview/src/lumeview/editor/isodraw/: isodraw.cpp  isodraw.h
lumeview/src/lumeview/editor/meshed/: meshed.cpp  meshed.h
lumeview/src/lumeview/gui/: arc_ball.cpp  arc_ball.h  arc_ball_control.cpp  arc_ball_control.h  arc_ball_view.cpp  arc_ball_view.h  imgui.h  imgui_binding.cpp  imgui_binding.h  window_event_listener.cpp  window_event_listener.h
lumeview/src/lumeview/math/: vec_math.h
lumeview/src/lumeview/mesh/: mesh_content.cpp  mesh_content.h  mesh_factory.cpp  mesh_factory.h  status.h  status_messages.cpp
lumeview/src/lumeview/mesh/cmd/: load_from_file.h  refine.h  register_mesh_commands.cpp  register_mesh_commands.h
lumeview/src/lumeview/mesh/widgets/: info.h  running_commands.h
lumeview/src/lumeview/render/: bind_scope.h  buffer.h  camera.cpp  camera.h  gl_buffer.h  renderer.h  shader.h  triangle_renderer.h  vertex_array_object.h  viewport.h
lumeview/src/lumeview/rendering/: camera.cpp  camera.h  view.cpp  view.h  viewport.h
lumeview/src/lumeview/scene/: content.h  mesh_content.cpp  mesh_content.h  node.cpp  node.h
lumeview/src/lumeview/util/: file_util.cpp  file_util.h  rect.h  shapes.cpp  shapes.h  shared_lock_ptr.h  to_string.h
lumeview/src/lumeview/widgets/: mesh_contents.h
src/: file_io.cpp  grob.cpp  grob_set.cpp  grob_set_types.cpp  neighborhoods.cpp  neighbors.cpp  normals.cpp  rim_mesh.cpp  subset_info_annex.cpp  surface_analytics.cpp  tests.cpp  tests_main.cpp  topology.cpp
src/commands/: arguments.cpp  types.cpp
src/lume/: neighborhoods.cpp  neighbors.cpp  normals.cpp
src/lumetest/: tests.cpp
test/: tests.cpp  tests.h  tests_main.cpp
test/test_meshes/: box_with_spheres.node  circle_12.ugx  circle_with_subsets.ugx  elems_refined.ugx  elems_refined_rim.ugx  tet_refined.ugx
test_meshes/: bunny.stl  elems.ugx  tet_refined_rim.ugx  tris_and_quads.ugx
testdata/meshes/: box.stl  quad.stl
